--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,21 @@ border-top:2px solid #D4DBE2;
 		justify-content:space-around;
 
 	}
+	footer{
+		height:180px;
+	}
+	.work1{
+		width:100%;
+		height:200px;
+		display:flex;
+		flex-direction:column;
+	} 
+	.work2{
+		width:100%;
+		height:200px;
+		display:flex;
+		flex-direction:column;
+	}
 	.vi{
 		width:59%;
 		height:400px;
