--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,9 @@ border-top:2px solid #D4DBE2;
 		flex-direction:column;
 		justify-content:space-around;
 	}
+	.forms{
+		display:none;
+	}
 	.pat{
 		width:100%;
 		height:700px;
