--- a/css/style.css
+++ b/css/style.css
@@ -529,6 +529,12 @@ border-top:2px solid #D4DBE2;
 	.forms{
 		display:none;
 	}
+	.tex{
+		display:none;
+	}
+	.but{
+		display:none;
+	}
 	.pat{
 		width:100%;
 		height:700px;
