--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,23 @@ border-top:2px solid #D4DBE2;
 		display:flex;
 		flex-direction:column;
 	}
+	header{
+		height:410px;
+		
+	}
+	.img1{
+		width:15%;
+		height:40px;
+		
+	.imag{
+		width:40%;
+		height:380px;
+	}
+	.cont{
+		width:54%;
+		height:380px;
+		font-size:18px;
+	}
 	.about_block{
 		width:100%;
 		height:3800px;
@@ -512,6 +529,27 @@ border-top:2px solid #D4DBE2;
 		justify-content:space-around;
 
 	}
+	.films_1 .films2{
+		width:90%;
+		height:200px;
+		
+	}
+	.anime_3 img{
+		width:90%;
+		height:200px;
+	}
+	.anime_4 img{
+		width:90%;
+		height:200px;
+	}	
+	.manga_5 img{
+		width:90%;
+		height:200px;
+	}
+	.manga_6 img{
+		width:90%;
+		height:200px;
+	}		
 	.about_cont{
 		width:100%;
 		height:3800px;
