--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,8 @@ border-top:2px solid #D4DBE2;
   background-color: #CFD8DC;
 }
 @media (max-width:480px){
-	main{
+	main{	
+		width:100%;
 		display:flex;
 		flex-direction:column;
 	}
